# LUXPRO

./: .firebaserc  .gitignore  README.md  build.gradle.kts  build_log.txt  build_log_utf8.txt  build_output.txt  build_output_ascii.txt  build_output_utf8.txt  check_paths.ps1  convert_log.py  convert_sha1.py  crash_log_live.txt  crash_log_live2.txt  data_deletion.html  final_build_output.txt  final_build_output_ascii.txt  lux_new.jks  lux_pro_key.jks  override_refactor.py  privacy_policy.html  read_log.py  replace_pkg.py  settings.gradle.kts  slider_crash_debug.txt  terms_of_service.html
.firebase/: hosting.aG9zdGluZw.cache
.github/workflows/: build.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  MathUtils.h  Menu.cpp  Menu.h  Tools.h  lux_engine.cpp  lux_os.cpp  main.cpp  native-lib.cpp
app/src/main/cpp/KittyMemory/: KittyMemory.h  MemoryPatch.h
app/src/main/cpp/Menu/: Jni.cpp  Setup.cpp
app/src/main/cpp/core/: auto_play.cpp  auto_play.hpp  bot_automation.cpp  bot_automation.hpp  core_engine.cpp  core_engine.hpp  hook_manager.cpp  hook_manager.hpp  jni_bridge.cpp  jni_bridge.hpp  native_strings.hpp  sentinel.cpp  sentinel.hpp
app/src/main/cpp/security/: anti_telemetry.cpp  anti_telemetry.hpp  crypto_layer.cpp  crypto_layer.hpp  ghost_protocol.cpp  ghost_protocol.hpp  polymorphic_engine.cpp  polymorphic_engine.hpp
app/src/main/cpp/vfx/: vfx_bloom_glsl.hpp  vfx_renderer.hpp  vfx_shader.cpp  vfx_shader.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hosting/: deletion.html  index.html  miniclip.html  privacy.html  terms.html
(+145 files in other folders)
